[gd_scene load_steps=2 format=3 uid="uid://bwf4aody3dl04"]

[ext_resource type="Script" path="res://game/scripts/ui/VisualNovelUI.gd" id="1"]

[node name="VisualNovelUI" type="CanvasLayer"]
script = ExtResource("1")

[node name="BackgroundImage" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 5

[node name="CharacterPortrait" type="TextureRect" parent="."]
anchors_preset = 2
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -200.0
offset_right = 350.0
offset_bottom = 200.0
stretch_mode = 5

[node name="DialogueBox" type="ColorRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = -20.0
color = Color(0, 0, 0, 0.8)

[node name="NameLabel" type="Label" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 2
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -100.0
text = "角色名称"
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="TextLabel" type="RichTextLabel" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -100.0
offset_right = -20.0
offset_bottom = -20.0
bbcode_enabled = true
theme_override_font_sizes/normal_font_size = 16
theme_override_colors/default_color = Color(1, 1, 1, 1)

[node name="ChoiceMenu" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = -50.0
alignment = 1
